--- a/.github/workflows/unittest.yml
+++ b/.github/workflows/unittest.yml
@@ -24,7 +24,11 @@ jobs:
       - name: Install dependencies
         run: |
           python -m pip install --upgrade pip
-          pip install -r requirements.txt
+          pip install -r requirements.txt || true
+          if ! pip show talib; then
+              echo "TA-Lib installation failed. Skipping..."
+          fi
+
       - name: Run tests
         run: |
           python -m unittest discover -s . -p 'test_*.py'
